corrected the errors, wrapped them in a link

--- a/style.css
+++ b/style.css
@@ -6,19 +6,19 @@
     padding-left: calc(50% - 720px);
     padding-right: calc(50% - 720px);
   }
-/* body {
+body {
     background-image: url(./img/heder-fon.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-  } */
+  }
 
 .top {
     padding-top: 196px;
-    background-image: url(./img/heder-fon.png);
+    /* background-image: url(./img/heder-fon.png);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: cover; */
 }
 
 .top-container {
@@ -41,7 +41,7 @@
     color: aliceblue;
     font-family: inherit;
     font-size: 64px;
-    padding: 94px 131px 10px 131px;
+    padding: 48px 131px 48px 131px;
 }
 
 .heading-big {
@@ -64,7 +64,7 @@
     color: aliceblue;
     font-family: Montserrat;
     font-size: 32px;
-    padding: 64px 121px;
+    padding: 3% 26% 5% 9%;
     
 }
 
@@ -94,6 +94,8 @@
     box-sizing: border-box;
     background: rgb(188, 236, 48);
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
     padding: 12px;
     overflow: hidden;
@@ -130,9 +132,9 @@
 .game-box {
     background: rgb(32, 32, 39);
     background-image: url(./img/vaivai.png);
-    background-position: 432px 0px;
+    background-position: 17% 0%;
     background-repeat: no-repeat;
-    padding-bottom: 144px;
+    padding-bottom: 0px;
 }
 
 .game-text1 {
@@ -166,7 +168,7 @@
 }
 
 .footer-text {
-    margin-top: 42px;
+    margin-top: -63px;
     background-color: hsl(90, 100%, 50%);
     padding-top: 32px;
     padding-bottom: 32px;
